RESOLVED FIXED88642
[BlackBerry] Wrong mimetype for empty file link
https://bugs.webkit.org/show_bug.cgi?id=88642
Summary [BlackBerry] Wrong mimetype for empty file link
Mary Wu
Reported 2012-06-08 03:21:55 PDT
For empty file link, we shouldn't give "application/octet-stream" which will lead to download.
Attachments
Patch (1.68 KB, patch)
2012-06-08 03:39 PDT, Mary Wu
no flags
Patch (1.95 KB, patch)
2012-06-10 19:31 PDT, Mary Wu
no flags
Mary Wu
Comment 1 2012-06-08 03:39:09 PDT
Rob Buis
Comment 2 2012-06-08 04:33:01 PDT
Comment on attachment 146534 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146534&action=review Change is correct but might be able to clean it up. > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:625 > + mimeType = "text/plain"; It seems like you can change the if if if if to if else if else sections. What do you think? This avoids testing for isNull() when you already know the outcome based on the previous statement/assignment.
Mary Wu
Comment 3 2012-06-10 19:28:06 PDT
(In reply to comment #2) > (From update of attachment 146534 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=146534&action=review > > Change is correct but might be able to clean it up. > > > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:625 > > + mimeType = "text/plain"; > > It seems like you can change the if if if if to if else if else sections. What do you think? This avoids testing for isNull() when you already know the outcome based on the previous statement/assignment. yes, could add else if some place.
Mary Wu
Comment 4 2012-06-10 19:31:22 PDT
Rob Buis
Comment 5 2012-06-11 06:49:31 PDT
Comment on attachment 146764 [details] Patch LGTM.
WebKit Review Bot
Comment 6 2012-06-11 20:44:56 PDT
Comment on attachment 146764 [details] Patch Clearing flags on attachment: 146764 Committed r120035: <http://trac.webkit.org/changeset/120035>
WebKit Review Bot
Comment 7 2012-06-11 20:45:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.