[BlackBerry] Wrong mimetype for empty file link https://bugs.webkit.org/show_bug.cgi?id=88642

Reviewed by Rob Buis.

RIM PR# 164164

For empty file link, we shouldn't give "application/octet-stream"
which will lead to download.

Reviewed internally by Charles Wei.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendResponseIfNeeded):


Canonical link: https://commits.webkit.org/106668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120035 268f45cc-cd09-0410-ab3c-d52691b4dbfc